--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "vue-spa readme file",
   "scripts": {
     "start": "node server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "rimraf ./dist && cross-env NODE_ENV=development npm run start",
+
+    "build:client": "cross-env NODE_ENV=production webpack --config ./build/webpack.client.config.js --progress --hide-modules",
+    "build": "rimraf ./dist && npm run build:client", 
+    
+    "start:prod":                 "cross-env NODE_ENV=production  npm run start"
   },
   "repository": {
     "type": "git",
