--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "vue-spa readme file",
   "scripts": {
     "start": "node server",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" ",
     "start:dev": "rimraf ./dist && cross-env NODE_ENV=development npm run start",
 
     "build:client": "cross-env NODE_ENV=production webpack --config ./build/webpack.client.config.js --progress --hide-modules",
